# simple-asr

./: CLAUDE.md  README.md  pyproject.toml
simple_asr/: __init__.py  cli.py  recorder.py  transcriber.py  utils.py
